Relocated my header to its correct spot and wrapped around <nav>. Added new <div class="titles-img"> wrapped around .innovations/button/.image2. Changed header in index.css to .titles-img.

--- a/css/index.css
+++ b/css/index.css
@@ -95,7 +95,7 @@ a:hover {
 	display: flex;
 }/* ENDS NAVIGATION: .TOP/ A/ .LOGO */
 /* HEADER: .INNOVATIONS/ BUTTON/ .IMAGES2 */
-header {
+.titles-img {
 	display:flex;
 	justify-content: space-around;
 	align-items: center;
@@ -207,8 +207,8 @@ footer {
     }
 
     .logo-nav {
-        width: 100%;
-        padding-bottom: 3%;
+        width: 110%;
+        padding-bottom: 5%;
         border-bottom:1px solid black;
         display: flex;        
     }
